--- a/src/components/css/AdminSidebar.css
+++ b/src/components/css/AdminSidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
   width: 260px;
   height: 100vh;
-  background-color: #ffffff; /* Light background for a modern look */
+  background-color: #ffffff;
   color: #333333; /* Dark text color for contrast */
   display: flex;
   flex-direction: column;
