--- a/src/components/css/AdminSidebar.css
+++ b/src/components/css/AdminSidebar.css
@@ -2,7 +2,7 @@
   width: 260px;
   height: 100vh;
   background-color: #ffffff;
-  color: #333333; /* Dark text color for contrast */
+  color: #333333;
   display: flex;
   flex-direction: column;
   border-radius: 0 8px 8px 0;
