--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -6,7 +6,7 @@
 
 .footer-content {
   display: flex;
-  flex-wrap: wrap; /* Ensure responsiveness */
+  flex-wrap: wrap;
   justify-content: space-between;
   max-width: 1200px;
   margin: auto;
