--- a/src/components/css/GenreSelector.css
+++ b/src/components/css/GenreSelector.css
@@ -9,7 +9,7 @@
 
 .genre-card {
   background-color: #ffffff;
-  border: 1px solid #ddd; /* Light border for a subtle outline */
+  border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
   cursor: pointer;
