--- a/src/components/css/GenreSelector.css
+++ b/src/components/css/GenreSelector.css
@@ -11,7 +11,7 @@
   background-color: #ffffff;
   border: 1px solid #ddd;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
   text-align: center;
