--- a/src/components/css/GenreSelector.css
+++ b/src/components/css/GenreSelector.css
@@ -16,7 +16,7 @@
   transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
   text-align: center;
   padding: 20px;
-  font-size: 18px; /* Larger font size for better readability */
+  font-size: 18px;
   display: flex;
   justify-content: center;
   align-items: center;
