--- a/src/components/css/GenreSelector.css
+++ b/src/components/css/GenreSelector.css
@@ -20,7 +20,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #333; /* Dark text color for better contrast */
+  color: #333;
 }
 
 .genre-card:hover {
