--- a/src/components/css/GenreSelector.css
+++ b/src/components/css/GenreSelector.css
@@ -25,7 +25,7 @@
 
 .genre-card:hover {
   transform: scale(1.05);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Darker shadow on hover */
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
 .genre-name {
