--- a/src/components/css/GenreSelector.css
+++ b/src/components/css/GenreSelector.css
@@ -33,7 +33,7 @@
 }
 
 .genre-card.selected {
-  background-color: #007bff; /* Highlight color for selected genre */
+  background-color: #007bff;
   color: white; /* White text for selected genre */
   border: 1px solid #0056b3; /* Darker border for selected genre */
 }
